test(service): enhance RecordServiceTest with user validation and response assertions